feat(page):질의응답 페이지 추가

--- a/adm/html/board-admin-qna-list.html
+++ b/adm/html/board-admin-qna-list.html
@@ -119,9 +119,11 @@
                             </td>
                             <td>26</td>
                             <td>
-                                <a href="../html/board-admin-qna-view.html" class="krds-btn link" target="_self" title="상세보기">
-                                    <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
-                                </a>
+                                <div class="align-left">
+                                    <a href="../html/board-admin-qna-answer.html" class="krds-btn link" target="_self" title="상세보기">
+                                        <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
+                                    </a>
+                                </div>
                             </td>
                             <td>
                                 <span class="krds-badge small icon-bd">
@@ -145,9 +147,11 @@
                             </td>
                             <td>25</td>
                             <td>
-                                <a href="../html/board-admin-qna-view.html" class="krds-btn link" target="_self" title="상세보기">
-                                    <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
-                                </a>
+                                <div class="align-left">
+                                    <a href="../html/board-admin-qna-answer.html" class="krds-btn link" target="_self" title="상세보기">
+                                        <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
+                                    </a>
+                                </div>
                             </td>
                             <td>
                                 <span class="krds-badge small icon-bd">
@@ -171,9 +175,11 @@
                             </td>
                             <td>24</td>
                             <td>
-                                <a href="../html/board-admin-qna-view.html" class="krds-btn link" target="_self" title="상세보기">
-                                    <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
-                                </a>
+                                <div class="align-left">
+                                    <a href="../html/board-admin-qna-answer.html" class="krds-btn link" target="_self" title="상세보기">
+                                        <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
+                                    </a>
+                                </div>
                             </td>
                             <td>
                                 <span class="krds-badge small icon-bd">
@@ -197,9 +203,11 @@
                             </td>
                             <td>23</td>
                             <td>
-                                <a href="../html/board-admin-qna-view.html" class="krds-btn link" target="_self" title="상세보기">
-                                    <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
-                                </a>
+                                <div class="align-left">
+                                    <a href="../html/board-admin-qna-answer.html" class="krds-btn link" target="_self" title="상세보기">
+                                        <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
+                                    </a>
+                                </div>
                             </td>
                             <td>
                                 <span class="krds-badge small icon-bd">
@@ -223,9 +231,11 @@
                             </td>
                             <td>22</td>
                             <td>
-                                <a href="../html/board-admin-qna-view.html" class="krds-btn link" target="_self" title="상세보기">
-                                    <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
-                                </a>
+                                <div class="align-left">
+                                    <a href="../html/board-admin-qna-answer.html" class="krds-btn link" target="_self" title="상세보기">
+                                        <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
+                                    </a>
+                                </div>
                             </td>
                             <td>
                                 <span class="krds-badge small icon-bd">
@@ -249,9 +259,11 @@
                             </td>
                             <td>21</td>
                             <td>
-                                <a href="../html/board-admin-qna-view.html" class="krds-btn link" target="_self" title="상세보기">
-                                    <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
-                                </a>
+                                <div class="align-left">
+                                    <a href="../html/board-admin-qna-answer.html" class="krds-btn link" target="_self" title="상세보기">
+                                        <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
+                                    </a>
+                                </div>
                             </td>
                             <td>
                                 <span class="krds-badge small icon-bd">
@@ -275,9 +287,11 @@
                             </td>
                             <td>20</td>
                             <td>
-                                <a href="../html/board-admin-qna-view.html" class="krds-btn link" target="_self" title="상세보기">
-                                    <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
-                                </a>
+                                <div class="align-left">
+                                    <a href="../html/board-admin-qna-answer.html" class="krds-btn link" target="_self" title="상세보기">
+                                        <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
+                                    </a>
+                                </div>
                             </td>
                             <td>
                                 <span class="krds-badge small icon-bd">
@@ -301,9 +315,11 @@
                             </td>
                             <td>19</td>
                             <td>
-                                <a href="../html/board-admin-qna-view.html" class="krds-btn link" target="_self" title="상세보기">
-                                    <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
-                                </a>
+                                <div class="align-left">
+                                    <a href="../html/board-admin-qna-answer.html" class="krds-btn link" target="_self" title="상세보기">
+                                        <span>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</span>
+                                    </a>
+                                </div>
                             </td>
                             <td>
                                 <span class="krds-badge small icon-bd">
