--- a/adm/tmpl/modal.html
+++ b/adm/tmpl/modal.html
@@ -56,7 +56,7 @@ Modal Template (공통)
       <!-- modal btn -->
       <div class="modal-btn btn-wrap">
         <button type="button" class="krds-btn medium tertiary close-modal">취소</button>
-        <button type="button" class="krds-btn medium primary close-modal">확인</button>
+        <button type="button" class="krds-btn medium primary modal-confirm-delete close-modal">확인</button>
       </div>
       <!-- //modal btn -->
       <!-- close button -->
