--- a/adm/html/board-admin-qna-list.html
+++ b/adm/html/board-admin-qna-list.html
@@ -48,7 +48,7 @@
           <div class="conts-area">
             <div class="search-list-top">
                 <ul class="sch-info" aria-live="polite">
-                    <li class="list-title">전체 <span class="point">22,459</span>건 <em class="description">제목을 클릭하여 문의내용을 확인하실 수 있습니다.</em></li>
+                    <li class="list-title">전체 <span class="point">22,459</span>건 <em class="description">제목을 클릭하여 문의내용 확인, 답변등록을 하실 수 있습니다.</em></li>
                 </ul>
                 <ul class="sch-sort">
                     <li class="m-hide">
