--- a/adm/html/member-teacher-edit.html
+++ b/adm/html/member-teacher-edit.html
@@ -157,7 +157,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium" data-field="org-name">
+                                <input type="text" class="krds-input large" data-field="org-name" placeholder="소속명을 입력하시면 목록이 나타납니다.">
                                 <!--학교 검색 리스트-->
                                 <div class="search-result-box">
                                     <ul class="result-list">
@@ -342,7 +342,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input large disabled" readonly data-field="org-region">
+                                <input type="text" class="krds-input large disabled" readonly data-field="org-region" placeholder="자동입력">
                             </div>
                         </div>
                     </div>
