--- a/adm/html/auth-find-pw-result.html
+++ b/adm/html/auth-find-pw-result.html
@@ -39,7 +39,7 @@
   <header class="main-header">
     <div class="header-top">
         <div class="logo">
-            <a href="..//html/auth-admin-login.html" target="_self" title="로그인페이지로 이동"><img src="../img/logo_bk.svg" alt="충청남도교육청 단위학교사업선택제"></a>
+            <a href="../html/auth-admin-login.html" target="_self" title="로그인페이지로 이동"><img src="../img/logo_bk.svg" alt="충청남도교육청 단위학교사업선택제"></a>
         </div>
         <!-- <div class="btn-wrap">
           <a href="#!" class="krds-btn medium text" target="_self"><i class="svg-icon ico-angle left"></i>이전 페이지로 돌아가기</a>
@@ -49,7 +49,7 @@
 
   <main id="container" class="find result">
     <div class="inner">
-        <div class="page-title-wrap">
+        <div class="page-title-wrap left">
           <h1 class="h-tit">
             비밀번호 찾기 결과
           </h1>
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class="page-btn-wrap">
+        <div class="page-btn-wrap wp100">
             <div class="btn-wrap">
                 <a href="#!" target="_parent" class="krds-btn tertiary">뒤로가기</a>
                 <a href="../html/auth-admin-login.html" target="_parent" class="krds-btn primary">로그인하기</a>
