--- a/adm/html/auth-find.html
+++ b/adm/html/auth-find.html
@@ -39,7 +39,7 @@
   <header class="main-header">
     <div class="header-top">
         <div class="logo">
-            <a href="..//html/auth-admin-login.html" target="_self" title="로그인페이지로 이동"><img src="../img/logo_bk.svg" alt="충청남도교육청 단위학교사업선택제"></a>
+            <a href="../html/auth-admin-login.html" target="_self" title="로그인페이지로 이동"><img src="../img/logo_bk.svg" alt="충청남도교육청 단위학교사업선택제"></a>
         </div>
         <div class="btn-wrap">
           <a href="#!" class="krds-btn medium text" target="_self"><i class="svg-icon ico-angle left"></i>이전 페이지로 돌아가기</a>
@@ -49,7 +49,7 @@
 
   <main id="container" class="find">
     <div class="inner">
-        <div class="page-title-wrap">
+        <div class="page-title-wrap left">
           <h1 class="h-tit">
             아이디 / 비밀번호 찾기
             <span class="small-txt">잃어버린 아이디와 비밀번호를 찾습니다.<br>인증서로 가입한 교사회원은 아이디찾기만 가능합니다.</span>
@@ -60,8 +60,7 @@
           <div class="auth-form-area">
             <div class="auth-wrap">
               <strong class="auth-tit">아이디</strong>
-              <fieldset>
-                <legend>아이디 찾기 폼</legend>
+              <form class="form">
                 <div class="fieldset">
                   <div class="form-group">
                     <div class="form-tit">
@@ -83,15 +82,14 @@
                     <a href="../html/auth-find-id-result-fail.html" target="_self" class="krds-btn large primary">아이디 찾기</a>
                   </div>
                 </div>
-              </fieldset>
+              </form>
             </div>
 
             <span class="line"></span>
 
             <div class="auth-wrap">
               <strong class="auth-tit">비밀번호</strong>
-              <fieldset>
-                <legend>비밀번호 찾기 폼</legend>
+              <form class="form">
                 <div class="fieldset">
                   <div class="form-group">
                     <div class="form-tit">
@@ -113,7 +111,7 @@
                     <a href="../html/auth-find-pw-result-fail.html" target="_self" class="krds-btn large primary">비밀번호 찾기</a>
                   </div>
                 </div>
-              </fieldset>
+              </form>
             </div>
           </div>
         </div>
