--- a/adm/html/member-program-supervisor-edit.html
+++ b/adm/html/member-program-supervisor-edit.html
@@ -135,9 +135,16 @@
                                 </div>
                                 <div class="form-conts">
                                     <select class="krds-form-select large">
-                                        <option value="직접입력">직접입력</option>
-                                        <option value="gmail.com">gmail.com</option>
-                                        <option value="naver.com">naver.com</option>
+                                        <option>직접입력</option>
+                                        <option>korea.kr</option>
+                                        <option>ai.cne.go.kr</option>
+                                        <option>hanmail.net</option>
+                                        <option>naver.com</option>
+                                        <option>gmail.com</option>
+                                        <option>hotmail.com</option>
+                                        <option>nate.com</option>
+                                        <option>kakao.com</option>
+                                        <option>yahoo.co.kr</option>
                                     </select>
                                 </div>
                             </div>
