--- a/adm/html/operation-program-settings.html
+++ b/adm/html/operation-program-settings.html
@@ -52,7 +52,7 @@
                 </div>
                 <form class="form">
                     <!-- 사업년도 -->
-                    <fieldset class="form-box">
+                    <div class="form-box">
                         <div class="form-tt">
                             <h4>사업년도</h4>
                         </div>
@@ -64,7 +64,7 @@
                                 <option value="2024">2024</option>
                             </select>
                         </div>
-                    </fieldset>
+                    </div>
                 </form>
             </section>
             <!-- 사업별 승인개수 Section -->
@@ -77,7 +77,7 @@
                     <p>승인 개수 제한을 두지 않을 경우 제한없음을 체크하시기 바랍니다.</p>
                 </aside>
                 <form class="form">
-                    <fieldset class="form-box">
+                    <div class="form-box">
                         <div class="form-tt">
                             <h4>선택 사업</h4>
                         </div>
@@ -92,8 +92,8 @@
                                 <span class="unit">개</span>
                             </div>
                         </div>
-                    </fieldset>
-                    <fieldset class="form-box">
+                    </div>
+                    <div class="form-box">
                         <div class="form-tt">
                             <h4>선택 외 사업</h4>
                         </div>
@@ -108,8 +108,8 @@
                                 <span class="unit">개</span>
                             </div>
                         </div>
-                    </fieldset>
-                    <fieldset class="form-box">
+                    </div>
+                    <div class="form-box">
                         <div class="form-tt">
                             <h4>자율 사업</h4>
                         </div>
@@ -124,8 +124,8 @@
                                 <span class="unit">개</span>
                             </div>
                         </div>
-                    </fieldset>
-                    <fieldset class="form-box">
+                    </div>
+                    <div class="form-box">
                         <div class="form-tt">
                             <h4>개방형 사업</h4>
                         </div>
@@ -140,8 +140,8 @@
                                 <span class="unit">개</span>
                             </div>
                         </div>
-                    </fieldset>
-                    <fieldset class="form-box">
+                    </div>
+                    <div class="form-box">
                         <div class="form-tt">
                             <h4>특교 사업</h4>
                         </div>
@@ -156,7 +156,7 @@
                                 <span class="unit">개</span>
                             </div>
                         </div>
-                    </fieldset>
+                    </div>
                 </form>
             </section>
         </div>
