chore:각 파일 클래스 수정

--- a/_common/resources/html/icon.html
+++ b/_common/resources/html/icon.html
@@ -112,13 +112,33 @@
     <i class="svg-icon ico-typobox"></i>
     <i class="svg-icon ico-typo"></i>
     <i class="svg-icon ico-veiwall"></i>
-     <i class="svg-icon ico-angle disabled"></i>
+    <i class="svg-icon ico-roundck"></i>
+</div>
+
+<strong>마스크 아이콘 색 변경 예시 :: 마스크 아이콘 뒤에 white, blue 클래스 추가하여 사용</strong>
+<div class="g-example-inner">
+    <i class="svg-icon ico-roundck white"></i>
+    <i class="svg-icon ico-sch white"></i>
+    <i class="svg-icon ico-veiwall blue"></i>
+    <i class="svg-icon ico-angle blue"></i>
+</div>
+
+<strong>disabled 아이콘 예시 :: 마스크 아이콘 뒤에 disabled 클래스 추가하여 사용</strong>
+<div class="g-example-inner">
+    <i class="svg-icon ico-angle disabled"></i>
+    <i class="svg-icon ico-minus disabled"></i>
+    <i class="svg-icon ico-pw-visible disabled"></i>
+    <i class="svg-icon ico-trash disabled-on"></i>
+</div>
+
+<strong>disabled 아이콘 예시 :: disabled 사용으로 만들어진 아이콘, 색상 클래스를 추가하면 적용 가능</strong>
+<div class="g-example-inner">
+    <i class="svg-icon ico-edit2-disabled"></i>
     <i class="svg-icon ico-refile-disabled"></i>
     <i class="svg-icon ico-lncheck-disabled"></i>
     <i class="svg-icon ico-talk-disabled"></i>
-    <i class="svg-icon ico-minus disabled"></i>
-    <i class="svg-icon ico-edit2-disabled"></i>
 </div>
+
 <strong>이미지 아이콘-색 변경 불가능</strong>
 <div class="g-example-inner">
     <i class="svg-icon ico-flag"></i>
