--- a/adm/html/member-teacher-edit.html
+++ b/adm/html/member-teacher-edit.html
@@ -43,7 +43,7 @@
   <main id="container" class="page-edit">
     <div class="inner cols-2 in-between">
         <!-- Left -->
-        <div class="left-section">
+        <div class="left-section max-wd-8">
             <strong class="page-title">수정 및 변경 관리</strong>
             <!-- 기본정보 -->
             <div class="section contents-box contents-box-shadow">
