feat(page) 메인, 개인정보 추가

--- a/kr/html/common-main.html
+++ b/kr/html/common-main.html
@@ -64,6 +64,7 @@
 
         <section class="cards-inner">
             <a href="" class="card">
+                <i class="link_icon">더보기</i>
                 <div class="card-content">
                     <div class="card-header">
                         <h2>선택사업</h2>
@@ -75,11 +76,12 @@
                     </p>
                 </div>
                 <div class="card-icon card-icon-1"></div>
-                <button class="card-arrow" aria-label="자세히 보기">
+                <div class="card-arrow" aria-label="자세히 보기">
                     <div class="arrow-icon"></div>
-                </button>
+                </div>
             </a>
             <a href="" class="card">
+                <i class="link_icon">더보기</i>
                 <div class="card-content">
                     <div class="card-header">
                         <h2>선택 외 사업</h2>
@@ -90,11 +92,12 @@
                     </p>
                 </div>
                 <div class="card-icon card-icon-2"></div>
-                <button class="card-arrow" aria-label="자세히 보기">
+                <div class="card-arrow" aria-label="자세히 보기">
                     <div class="arrow-icon"></div>
-                </button>
+                </div>
             </a>
             <a href="" class="card">
+                <i class="link_icon">더보기</i>
                 <div class="card-content">
                     <div class="card-header">
                         <h2>개방형 사업</h2>
@@ -106,11 +109,12 @@
                     </p>
                 </div>
                 <div class="card-icon card-icon-3"></div>
-                <button class="card-arrow" aria-label="자세히 보기">
+                <div class="card-arrow" aria-label="자세히 보기">
                     <div class="arrow-icon"></div>
-                </button>
+                </div>
             </a>
             <a href="" class="card">
+                <i class="link_icon">더보기</i>
                 <div class="card-content">
                     <div class="card-header">
                         <h2>특교·추경신규 사업</h2>
@@ -123,11 +127,12 @@
                     </p>
                 </div>
                 <div class="card-icon card-icon-4"></div>
-                <button class="card-arrow" aria-label="자세히 보기">
+                <div class="card-arrow" aria-label="자세히 보기">
                     <div class="arrow-icon"></div>
-                </button>
+                </div>
             </a>
             <a href="" class="card">
+                <i class="link_icon">더보기</i>
                 <div class="card-content">
                     <div class="card-header">
                         <h2>자율사업</h2>
@@ -138,9 +143,9 @@
                     </p>
                 </div>
                 <div class="card-icon card-icon-5"></div>
-                <button class="card-arrow" aria-label="자세히 보기">
+                <div class="card-arrow" aria-label="자세히 보기">
                     <div class="arrow-icon"></div>
-                </button>
+                </div>
             </a>
             <a href="" class="action-card data">
                 <div class="action-card-content">
@@ -191,7 +196,7 @@
         
     </div>   
     <div class="popup-floating">
-        <button class="popup-btn" aria-label="팝업 열기">
+        <button class="popup-btn open-modal" aria-label="팝업 열기" data-target="modal-popup" title="팝업열기">
             <div class="popup-circle"></div>
             <div class="popup-icon"></div>
             <div class="popup-text">
