--- a/adm/html/common-dashboard.html
+++ b/adm/html/common-dashboard.html
@@ -46,19 +46,9 @@
   <header id="header"></header>
   <!-- //header -->
 
-  <!-- <main id="container">
-    <div class="inner">
-        <div class="contents contents-box contents-box-shadow">
-          <div class="conts-hd">콘텐츠 헤드</div>
-          <div class="conts-area">콘텐츠 바디</div>
-          <div class="conts-ft">콘텐츠 푸터</div>
-        </div>
-    </div>
-  </main> -->
-
 
   <main id="container" class="main-content">
-    <div class="content-inner">
+    <div class="content-inner inner">
       <!-- Greeting -->
       <div class="greeting">
         <h1 class="greeting-title">홍길동 장학사님, 안녕하세요.</h1>
@@ -73,10 +63,12 @@
         <!-- Chart 1: 사업별 현황 (도넛 차트) -->
         <article class="chart-card">
           <div class="chart-container">
-            <div class="donut-chart">
-              <div class="chart-center-label">사업별 현황</div>
-              <i class="donut-placeholder"></i>
+            
+            <div class="chart-wrap">
+              <strong class="chart-label">사업별 현황</strong>
+              <div id="chart-program"></div>
             </div>
+
             <ul class="chart-legend">
               <li><i class="legend-dot color-1"></i>선택사업</li>
               <li><i class="legend-dot color-2"></i>선택 외 사업</li>
@@ -89,13 +81,13 @@
 
         <!-- Chart 2: 연도별 현황 (막대 차트) -->
         <article class="chart-card">
-          <header class="chart-header">
-            <h2 class="chart-title">연도별 현황</h2>
+          <div class="chart-header">
+            <h3 class="chart-title">연도별 현황</h3>
             <p class="chart-date">2025.10.16일 기준</p>
-          </header>
-          <div class="bar-chart">
-            <i class="bar-chart-placeholder"></i>
           </div>
+
+          <div id="chart-year"></div>
+
           <ul class="chart-legend horizontal">
             <li><i class="legend-dot color-1"></i>선택사업</li>
             <li><i class="legend-dot color-2"></i>선택 외 사업</li>
@@ -107,251 +99,45 @@
 
         <!-- Chart 3: 진행 현황 (막대 차트) -->
         <article class="chart-card">
-          <header class="chart-header">
-            <h2 class="chart-title">진행 현황</h2>
+          <div class="chart-header">
+            <h3 class="chart-title">진행 현황</h3>
             <p class="chart-date">2025.10.16일 기준</p>
-          </header>
-          <div class="bar-chart">
-            <i class="bar-chart-placeholder"></i>
           </div>
+
+          <div id="chart-progress"></div>
+
           <ul class="chart-legend horizontal">
-            <li><i class="legend-dot color-6"></i>요청</li>
-            <li><i class="legend-dot color-7"></i>접수완료</li>
+            <li><i class="legend-dot color-6"></i>승인</li>
+            <li><i class="legend-dot color-7"></i>미승인</li>
           </ul>
         </article>
       </section>
 
       <!-- 최근 사업신청 -->
       <section class="table-section">
-        <header class="section-header">
+        <div class="section-header">
           <h2 class="section-title">최근 사업신청</h2>
           <i class="icon-arrow-right"></i>
-        </header>
+        </div>
 
-        <table class="data-table">
-          <colgroup>
-            <col width="8%">
-            <col width="8%">
-            <col width="20%">
-            <col width="12%">
-            <col width="10%">
-            <col width="10%">
-            <col width="8%">
-            <col width="8%">
-            <col width="8%">
-            <col width="8%">
-          </colgroup>
-          <thead>
-            <tr>
-              <th>사업신청</th>
-              <th>공백</th>
-              <th>사업명</th>
-              <th>과업 학교명</th>
-              <th>심사결과(안) 영액결과(안)</th>
-              <th>담당자 연락처</th>
-              <th>등록일</th>
-              <th>신청일</th>
-              <th>심사결과</th>
-              <th>결과보고</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2026</td>
-              <td>초등</td>
-              <td>
-                <span class="badge badge-선택사업">선택사업</span>
-                2026~개방형~000<br>
-                [별도사업] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영
-              </td>
-              <td>아산 충남미래초학교</td>
-              <td>1,000<br>0</td>
-              <td>홍길동<br>042-222-3333</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i></td>
-              <td>
-                <select class="status-select">
-                  <option>미선정</option>
-                </select>
-              </td>
-              <td><i class="icon-check-circle"></i></td>
-            </tr>
-            <tr>
-              <td>2026</td>
-              <td>초등</td>
-              <td>
-                <span class="badge badge-선택사업">선택사업</span>
-                2026~개방형~000<br>
-                [별도사업] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영
-              </td>
-              <td>아산 충남미래초학교</td>
-              <td>1,000<br>0</td>
-              <td>홍길동<br>042-222-3333</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i></td>
-              <td>
-                <select class="status-select">
-                  <option>미선정</option>
-                </select>
-              </td>
-              <td><i class="icon-check-circle"></i></td>
-            </tr>
-            <tr>
-              <td>2026</td>
-              <td>초등</td>
-              <td>
-                <span class="badge badge-선택사업">선택사업</span>
-                2026~개방형~000<br>
-                [별도사업] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영
-              </td>
-              <td>아산 충남미래초학교</td>
-              <td>1,000<br>0</td>
-              <td>홍길동<br>042-222-3333</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i></td>
-              <td>
-                <select class="status-select">
-                  <option>미선정</option>
-                </select>
-              </td>
-              <td><i class="icon-check-circle"></i></td>
-            </tr>
-            <tr>
-              <td>2026</td>
-              <td>초등</td>
-              <td>
-                <span class="badge badge-선택사업">선택사업</span>
-                2026~개방형~000<br>
-                [별도사업] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영
-              </td>
-              <td>아산 충남미래초학교</td>
-              <td>1,000<br>0</td>
-              <td>홍길동<br>042-222-3333</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i></td>
-              <td>
-                <select class="status-select">
-                  <option>미선정</option>
-                </select>
-              </td>
-              <td><i class="icon-check-circle"></i></td>
-            </tr>
-            <tr>
-              <td>2026</td>
-              <td>초등</td>
-              <td>
-                <span class="badge badge-선택사업">선택사업</span>
-                2026~개방형~000<br>
-                [별도사업] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영
-              </td>
-              <td>아산 충남미래초학교</td>
-              <td>1,000<br>0</td>
-              <td>홍길동<br>042-222-3333</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i></td>
-              <td>
-                <select class="status-select">
-                  <option>미선정</option>
-                </select>
-              </td>
-              <td><i class="icon-check-circle"></i></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="krds-table-wrap" id="application-list"></div>
 
         <p class="table-footer">총 사업 : 20,727 개</p>
       </section>
 
       <!-- 최근 결과보고 -->
       <section class="table-section">
-        <header class="section-header">
+        <div class="section-header">
           <h2 class="section-title">최근 결과보고</h2>
           <i class="icon-arrow-right"></i>
-        </header>
+        </div>
 
-        <table class="data-table">
-          <colgroup>
-            <col width="8%">
-            <col width="10%">
-            <col width="15%">
-            <col width="37%">
-            <col width="8%">
-            <col width="10%">
-            <col width="8%">
-            <col width="4%">
-          </colgroup>
-          <thead>
-            <tr>
-              <th>사업연도</th>
-              <th>사업구분</th>
-              <th>사업번호</th>
-              <th>사업명</th>
-              <th>담당자</th>
-              <th>연락처</th>
-              <th>등록일</th>
-              <th>결과보고</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2026</td>
-              <td><span class="badge badge-선택사업">선택사업</span></td>
-              <td>2026~개방형~000</td>
-              <td>[별도모집] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영</td>
-              <td>홍길동</td>
-              <td>041-640-1234</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i><i class="icon-mail"></i></td>
-            </tr>
-            <tr>
-              <td>2026</td>
-              <td><span class="badge badge-개방형사업">개방형사업</span></td>
-              <td>2026~개방형~000</td>
-              <td>[별도모집] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영</td>
-              <td>홍길동</td>
-              <td>041-640-1234</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i><i class="icon-mail"></i></td>
-            </tr>
-            <tr>
-              <td>2026</td>
-              <td><span class="badge badge-신규사업">신규사업</span></td>
-              <td>2026~개방형~000</td>
-              <td>[별도모집] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영</td>
-              <td>홍길동</td>
-              <td>041-640-1234</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i><i class="icon-mail"></i></td>
-            </tr>
-            <tr>
-              <td>2026</td>
-              <td><span class="badge badge-자율사업">자율사업</span></td>
-              <td>2026~개방형~000</td>
-              <td>[별도모집] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영</td>
-              <td>홍길동</td>
-              <td>041-640-1234</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i><i class="icon-mail"></i></td>
-            </tr>
-            <tr>
-              <td>2026</td>
-              <td><span class="badge badge-특교추경신규사업">특교·추경신규사업</span></td>
-              <td>2026~개방형~000</td>
-              <td>[별도모집] 2025년 충남혁명생리교육특별 클럽내역 현장방역 정책 운영</td>
-              <td>홍길동</td>
-              <td>041-640-1234</td>
-              <td>2025-07-24</td>
-              <td><i class="icon-doc"></i><i class="icon-mail"></i></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="krds-table-wrap" id="report-list"></div>
 
         <p class="table-footer">총 사업 : 20,727 개</p>
       </section>
     </div>
   </main>
-
-
 
 
   <!-- footer -->
@@ -360,7 +146,6 @@
 
 </div><!--//wrap-->
 
-<div id="modalLoad"></div>
 
 </body>
 </html>
